database. add, delete, and find

--- a/views/admin/index.pug
+++ b/views/admin/index.pug
@@ -1,7 +1,11 @@
-extends layout
+extends ../layout
 
 block content
   h1= title
+  nav 
+    ul 
+      li 
+        a(href='admin/news/add')  Dodaj
   table 
     tr 
       th id 
@@ -12,6 +16,4 @@ block content
         td=index
         td=item.title 
         td 
-          a Usuń 
-        
-  
+          a(href=`admin/news/delete/${item._id}`) Usuń 
