--- a/views/quiz.pug
+++ b/views/quiz.pug
@@ -2,4 +2,21 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  if show
+    form(method='post')
+      p Jaka jest twoja ulubiona pora roku 
+      ul
+        each item in data
+          li 
+            label=item.title 
+            input(type='radio' name='quiz' value=item._id)
+      input(type="submit", value='zaglosuj')
+      p Aby zobaczyc wyniki oddaj glos 
+  else 
+      h1 Dokonales juz glosu w ankiecie 
+      p wyniki 
+      ul 
+        each item in data
+          li #{item.title} glosów #{item.vote}  (#{Math.round(item.vote/sum*100)}%)
+      p Liczba oddanych głosow #{sum}
+
